--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Thomas Alcala Schneider <thomas.alcala@gmail.com>"]
 edition = "2018"
 description = "Translate a text file to any language."
 license = "MIT"
+repository = "https://github.com/ThomasMarcel/rosette.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
